--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3.2'
 services:
   db:
     build: .
-    image: mcmoe/mssqldocker:v2019.CTP21.0
+    image: mcmoe/mssqldocker:v2019.CU4.0
     environment:
       ACCEPT_EULA: Y
       SA_PASSWORD: 2astazeY
